--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@
   padding: 10px;
 }
 
+#title {
+  padding: 5px 0;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
 #lyrics {
   font-style: italic;
   font-size: 2em;
@@ -30,4 +36,22 @@
 #links {
   padding: 10px 0;
   font-size: 1.2em;
+}
+
+@media screen and (max-width: 768px) {
+  #title {
+    font-size: 2em;
+  }
+
+  #lyrics {
+    font-size: 2.5em;
+  }
+
+  #generate {
+    font-size: 2em;
+  }
+
+  #links {
+    font-size: 1.5em;
+  }
 }
